--- a/gb/23/8/15/n14054013.md
+++ b/gb/23/8/15/n14054013.md
@@ -8,7 +8,7 @@
 <hr>
 	<p>【大纪元2023年08月15日讯】（大纪元记者林达编译报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%9E%E5%AF%9F%E5%8F%B7.md#1">洞察号</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%AB%E6%98%9F.md#1">火星</a>登陆器好像一个聚宝盆，尽管它已于去年年底退役，但它发回地球的数据继续为研究火星提供新的、令人兴奋的窗口。最近，科学家研究了洞察号的数据后发现，火星的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%87%AA%E8%BD%AC.md#1">自转</a>正在加速。虽然自转速度的加速度仅为4毫弧秒/年2，但火星上的一天无疑是在变短。</p>
 <p>该团队6月14日在《<ahref="https://www.nature.com/articles/s41586-023-06150-0" target="_blank" rel="noopener noreferrer">自然</a>》（Nature）杂志上发表了相关论文。</p>
-<p>收集数据来观察这种变化并非易事。“我们寻找的是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%AB%E6%98%9F.md#1">火星</a>一年中仅有几十釐米（centimeter）的变化，”该论文的主要作者塞巴斯蒂安·勒迈斯特（Sebastien Le Maistre）在比利时王家天文台（Royal Observatory of Belgium）说道。“我们需要长时间去积累大量数据才能看到这些变化。”</p>
+<p>收集数据来观察这种变化并非易事。“我们寻找的是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%AB%E6%98%9F.md#1">火星</a>一年中仅有几十厘米（centimeter）的变化，”该论文的主要作者塞巴斯蒂安·勒迈斯特（Sebastien Le Maistre）在比利时王家天文台（Royal Observatory of Belgium）说道。“我们需要长时间去积累大量数据才能看到这些变化。”</p>
 <p>该项目利用了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%9E%E5%AF%9F%E5%8F%B7.md#1">洞察号</a>在火星上前900天的测量数据（因足够长的时间范围，才能看到每年仅毫弧秒量级的变化），并充分利用了洞察号上面的“旋转和内部结构实验”（RISE）仪表板。美国宇航局（NASA）利用其深空网络向洞察号发送一束无线电波。当电波到达时，RISE将其反射回地球，并在地球上检查光束频率的微小变化，频率变化能够反映出转速的变化。</p>
 <p>一旦研究人员确定这些变化是转速而非其它因素污染造成的（比如，无线电频率可以被大气中的水或太阳风等物质改变），就能够清晰地看到转速的变化。</p>
 <p>洞察号的首席研究员布鲁斯·巴纳特（Bruce Banerdt）在新闻稿中表示，“能够获得如此精确的最新测量结果真是太酷了。长期以来，我一直致力于在火星上建立像洞察号这样的行星物理站，这样的结果让我几十年的工作没有白费。”</p>
@@ -18,45 +18,36 @@
 <p>我们人类很乐于不断地向火星派出机器人，我们把它们送上去，给它们起名字，跟踪它们的进展，它们反过来回馈给我们极具价值的数据，从而了解我们自己尚无法到达的世界。◇#</p>
 <p>责任编辑：叶紫微</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053904.md#1">生物工程酵母将农业废弃物变“黄金”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052520.md#1">投资禁令意在台海战？美吸取俄乌战教训</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052474.md#1">闻所未闻 白宫派遣黑客大战最强AI</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052282.md#1">俄国成功发射登月飞船 时隔47年重返月球</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106382.md#1">研究发现火星地表下存在放射性岩浆海洋</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106247.md#1">针对AI开发 G7发布国际指导原则和规范</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106202.md#1">白宫颁布全面行政令 规范人工智能系统开发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106226.md#1">防AI失控 多国政府拟定相关限制</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/20/n10319814.md#1" target="_blank">裴毅然：重庆谈判真相——破裂主责在“共”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/15/n2263295.md#1" target="_blank">调查报告：法轮功与健康</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/16/n10307862.md#1" target="_blank">中共淫乱的前生今世（11）前车之鉴</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/27/n11480776.md#1" target="_blank">印度中部城市学校师生学炼法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040667.md#1">地狱到底为什么存在？无间地狱哪里是尽头</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049548.md#1">【未解之谜】神通第一的莲花色</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051960.md#1">【未解之谜】探秘中国第一神山</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046440.md#1">劫数天定难以避免吗？明末清初历史见证</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050324.md#1">科学家发现3000年前由陨石铁制成的箭头</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14053002.md#1">【菁英论坛】 CPI和PPI双降 中国经济在崩解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053809.md#1">【探索时分】捷报频传 乌克兰收复乌罗扎因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053384.md#1">【新闻大家谈】中国古典舞 含蓄与张力的碰撞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14053003.md#1">苏联式笑话在中国网络复兴 加剧中共不安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053014.md#1">沈舟：中共火箭军换司令就不怯战了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14052985.md#1">分析：中国房企债可敌国 很快撞击金融体系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053268.md#1">张学友大马演唱会爆意外 唱到一半在台上晕倒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052590.md#1">与彼特闹离婚已7年 裘莉或因这事不再纠缠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052538.md#1">吴镇宇14岁儿子费曼自曝有病 宣布退出微博</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052561.md#1">西安突叫停大型演唱活动 陶喆张震岳无法登台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052420.md#1">金奖导演吐肮脏秘密：赚到的钱无法带出中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046460.md#1">不再误踩地雷！“聆听”让你拥有好人缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14046915.md#1">年过七旬不花眼 医师传授护眼秘诀 让你心明眼亮</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053126.md#1">如何清理浴室里的莲蓬头？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14052750.md#1">房市排名 现在大家都想搬去这些城市！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050450.md#1">中医治抑郁最快3个月 有3要诀要牢记</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/15/n14054013.htm">科学家发现火星自转正在加速 原因不明</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054013.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
