--- a/gb/23/8/21/n14058372.md
+++ b/gb/23/8/21/n14058372.md
@@ -2,13 +2,17 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【秦鹏观察】A股跌惨 习为何让中国经济陷困境</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14058457-1200.-800-copy-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14058457-1200.-800-copy-600x400.jpg" />///image2=```diff
+- A股跌破3100点；香港进熊市，大陆人却纷纷涌入存钱；经济学家洪灏：中国杠杆达日本泡沫顶峰；可怕的“衰退预期”到来！（《秦鹏观察》提供）
+```
 <h6>A股跌破3100点；香港进熊市，大陆人却纷纷涌入存钱；经济学家洪灏：中国杠杆达日本泡沫顶峰；可怕的“衰退预期”到来！（《秦鹏观察》提供）
 </h6>
 <hr>
 	<p>【大纪元2023年08月22日讯】观众朋友们大家好，欢迎收看《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e7%a7%a6%e9%b5%ac%e8%a7%80%e5%af%9f.md#1">秦鹏观察</a>》。今天是美东时间8月21日，京港台时间8月22日。</p>
 <p>今天焦点：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E8%82%A1%E5%B8%82.md#1">中国股市</a>跌破3100点。中央级媒体称，A股将成全球资产配置主战场。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的犹豫，恐将导致可怕的“衰退预期”自我实现。</p>
 <p>经济学家洪灏曲线传递真相：中国杠杆已经超过日本泡沫时期的顶峰。内地人纷纷到香港存钱。</p>
+</p>
+<p><center><a title="YouTube video player" src=""></a><a href="https://dsgpxulwvf05x.cloudfront.net/M2txMwnei"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/vio_NofUKiI" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <h2>A股跌破3100点 只因<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>不肯来了？</h2>
 <p>中国A股三大指数周一（8月21日）集体下跌，其中上证指数下跌1.24%，收盘报3092.98点，失守3100整数点大关；深证指数跌幅1.32%；创业板指数跌了1.60%，收盘2084.97点，创下2020年6月以来的逾3年新低。</p>
 <p>这种变化，出乎很多人的意料，因为就在上周五，中共证监会负责人，还就活跃资本市场、提振投资者信心，专门答记者问。而周一，中共央行再次下调了1年期“贷款市场报价利率（LPR）”。</p>
@@ -55,50 +59,41 @@
 <p>一些媒体称，这是因为，在联系汇率制度下，香港紧随美联储加息步伐，港元、美元存款利率显&#33879;上行。</p>
 <p>不过，根据我了解的情况，现在很多中国人也在其它国家开户，包括新加坡、美国和澳大利亚、加拿大等。原因，其实大家应该知道，一方面大陆的政治氛围让人不安，另一方面，对人民币长期贬值的预期越来越强烈，有知名金融学者最近在小范围说，美元对人民币真实汇率现在是1:20。所以，我的建议是，大家如果能够换美元，能够换多少换多少，换了尽量存在境外。</p>
 <p>好了，我们今天就谈到这里。请喜欢我节目的朋友们，关注《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E8%A7%82%E5%AF%9F.md#1">秦鹏观察</a>》，记得点赞、订阅、转发，谢谢大家，我们明天见。</p>
-<p>欢迎订阅YouTube频道：<ahref="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg">https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg</a><br />
+<p>欢迎订阅YouTube频道：<ahref=""></a><a href="https://dsgpxulwvf05x.cloudfront.net/M2txMwnei"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg">"></a><a href="https://dsgpxulwvf05x.cloudfront.net/M2txMwnei"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg</a><br />
 欢迎订阅干净世界频道：<ahref="https://www.ganjing.com/zh-CN/channel/1eiqjdnq7go7cVXgAJjJp39H61270c">https://www.ganjing.com/zh-CN/channel/1eiqjdnq7go7cVXgAJjJp39H61270c</a></p>
 <p>《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e7%a7%a6%e9%b5%ac%e8%a7%80%e5%af%9f.md#1">秦鹏观察</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/10/n14051840.md#1">【秦鹏观察】重击最大移民机构 中共醉翁之意？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053887.md#1">【秦鹏观察】国有房企也爆雷 传本周还有巨响</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054698.md#1">【秦鹏观察】被青年失业率吓坏？中共停发遭讽</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14056210.md#1">【秦鹏观察】房地产泡沫崩裂 中南海为何不急？</a></li>
-<hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/12/n11038748.md#1" target="_blank">邢诒心：作为地主崽的童年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10687820.md#1" target="_blank">一位中国花季少女给奶奶的那个吻</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/7/4/n9353698.md#1" target="_blank">代理法轮功案 律师从无罪辩护到主动控告</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057320.md#1">在高空目击UFO 美航空公司机长拍下画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053239.md#1">【未解之谜】震惊世界 悬空寺之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056246.md#1">【未解之谜】上古通天神树 在这里？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053717.md#1">“靠山”不可靠  皇上厚爱的驸马爷走上不归路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049845.md#1">【古道人生】丈夫试测妻子是否忠心 结果酿成大祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057261.md#1">【还原真相】习近平的牵马人：新火箭军司令王厚斌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057492.md#1">【时事军事】F-16进入乌克兰的真正障碍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057080.md#1">【环球直击】美国将对五家中国太阳能公司征税</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057202.md#1">分析：“金砖五国”已崩溃 应予以解散</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057222.md#1">什么原因造成一瓶辣椒酱卖到五十多美元？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057212.md#1">中共欲掀全民反间谍运动 遭各方抵制</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057626.md#1">与李玟遭遇相似 乐嘉自曝录《超级演说家》受辱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057602.md#1">挺李玟 长春官方电台宣布永不合作《好声音》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056807.md#1">车祸后仍在复健 林志颖晒25年前帅照吐心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057160.md#1">原版《白雪公主》导演儿子批真人版侮辱经典</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057028.md#1">Blackpink Lisa登IG百大富豪 天价广告金额曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057393.md#1">有20多年经验 美训犬师：我不会养这3种狗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051902.md#1">吃对坚果可护心 营养师理想坚果前5名 第1名是它</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057951.md#1">巴菲特下赌新房建筑商 投8亿买这3股</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053051.md#1">学到这些美德 你将会赢得更多的友谊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056620.md#1">有盐&#038;无盐黄油大不同 烘焙这样用</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/21/n14058372.htm">【秦鹏观察】A股跌惨 习为何让中国经济陷困境</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058372.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
